js262/test/language/expressions/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-field-init.js


/*---
description: No space allowed between sigil and IdentifierName (Field with Initializer) (class expression)
esid: prod-ClassElement
features: [class-fields-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    ClassElementName :
      PropertyName
      PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

var C = class {
  # x = 1;
};
